--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,7 @@
       <h2 class="logo">Site logo</h2>
       .
     </div>
+    <footer><p class="p1">copyright @2020</p>
+    <p class="p2">cedcoss technology</p></footer>
   </body>
 </html>
