--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,49 @@
         <li><a href="">Company</a></li>
       </ul>
       <h2 class="logo">Site logo</h2>
-      .
+      <div class="S1">
+        <h2>Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+          commodi voluptate ipsum ex porro! Vitae libero tenetur odio voluptates
+          vel? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Quibusdam ipsa nostrum dolorum quisquam blanditiis aperiam aliquid
+          inventore praesentium quod harum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad animi consequuntur laboriosam impedit eveniet consequatur reprehenderit modi nesciunt repellendus?
+        </p>
+        <button type="submit">Submit</button>
+      </div>
+      <div class="S2">
+        <div class="card">
+          <p class="blank"></p>
+          <h2>Heading</h2>
+          <p class="content">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta,
+            minima?
+          </p>
+          <a href="">learn more</a>
+        </div>
+        <div class="card">
+          <p class="blank"></p>
+          <h2>Heading</h2>
+          <p class="content">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta,
+            minima?
+          </p>
+          <a href="">learn more</a>
+        </div>
+        <div class="card">
+          <p class="blank"></p>
+          <h2>Heading</h2>
+          <p class="content">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta,
+            minima?
+          </p>
+          <a href="">learn more</a>
+        </div>
+      </div>
+      <div class="section3"><h2 class="inline">Subscribe us</h2>
+           <input type="text" name="" id="" placeholder="text-box" class="inline">
+               <button  type="reset" class="inline">submit</button></div>
     </div>
     <footer><p class="p1">copyright @2020</p>
     <p class="p2">cedcoss technology</p></footer>
